--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/markup/index.jade
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/markup/index.jade
@@ -3,24 +3,20 @@
 doctype html
 html(lang='en')
   head
-    title= '{{cookiecutter.project_name}}'
-    meta(charset='utf-8')
-    meta(
-      name='viewport'
-      content='width=device-width, initial-scale=1.0'
-    )
-    meta(
-      name='description'
-      content='{{cookiecutter.project_name}}'
-    )
+    title {{cookiecutter.project_name}}
+    include ./partials/head.jade
+
+    meta(property='og:title', content='{{cookiecutter.project_name}}')
+    meta(property='og:url', content='{{cookiecutter.website}}')
+    link(rel='canonical', href='{{cookiecutter.website}}')
     link(rel='stylesheet', type='text/css', href='css/libraries.css')
     link(rel='stylesheet', type='text/css', href='css/app.css')
   body
-    h1= {{cookiecutter.project_name}}
-    p= {{cookiecutter.project_short_description}}
+    h1 {{cookiecutter.project_name}}
+    p {{cookiecutter.project_short_description}}
 
     script(type='text/javascript', src='js/libraries.js')
     script(type='text/javascript', src='js/app.js')
-    script
+    script.
       var app = require('app');
       app.init();
